<?xml version="1.0"?>
<package format="2">
  <name>samplepkg</name>
  <version>0.0.1</version>
  <description>Trial with A Gentle intro to ros</description>
  <maintainer email="dynamist.sb@gmail.com">sibi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>